apps/romm/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: romm
  namespace: romm
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
  hostnames:
    - "romm.kadenzobel.com"
  rules:
    - filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: X-Forwarded-Proto
                value: https
      backendRefs:
        - name: romm
          port: 80
