apps/romm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: romm
  namespace: romm
spec:
  ingressClassName: istio
  rules:
  - host: romm.kadenzobel.com
    http:
      paths:
      - backend:
          service:
            name: romm
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
